RESOLVED FIXED40467
Web Inspector: localize missing script source message
https://bugs.webkit.org/show_bug.cgi?id=40467
Summary Web Inspector: localize missing script source message
Yury Semikhatsky
Reported 2010-06-11 02:44:14 PDT
Localize missing script source message.
Attachments
Patch (1.87 KB, patch)
2010-06-11 02:47 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2010-06-11 02:47:55 PDT
Yury Semikhatsky
Comment 2 2010-06-11 05:39:27 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/English.lproj/localizedStrings.js M WebCore/inspector/InspectorController.cpp Committed r61008
Note You need to log in before you can comment on or make changes to this bug.