2010-06-11  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: localize missing script source message
        https://bugs.webkit.org/show_bug.cgi?id=40467

        * English.lproj/localizedStrings.js:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didParseSource): fixed typo in comment.


Canonical link: https://commits.webkit.org/52023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61008 268f45cc-cd09-0410-ab3c-d52691b4dbfc