WebCore/inspector/InspectorController.cpp
@@ -1692,7 +1692,7 @@ void InspectorController::removeBreakpoint(const String& sourceID, unsigned line
 
 void InspectorController::didParseSource(const String& sourceID, const String& url, const String& data, int firstLine, ScriptWorldType worldType)
 {
-    // Don't send script content to the front end until it's realy needed.
+    // Don't send script content to the front end until it's really needed.
     m_frontend->parsedScriptSource(sourceID, url, "", firstLine, worldType);
 
     if (url.isEmpty())
